--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
+    "redux-saga": "^1.1.3",
     "theme-ui": "^0.9.1",
     "web-vitals": "^1.1.1"
   },
