--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,16 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@reduxjs/toolkit": "^1.6.0",
+    "@syncfusion/ej2-react-calendars": "^19.1.66",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^13.0.10",
     "axios": "^0.21.1",
+    "date-fns": "^2.22.1",
     "react": "^17.0.2",
+    "react-date-range": "^1.1.4",
+    "react-datepicker": "^4.1.1",
+    "react-day-picker": "^7.4.10",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
