--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.0.10",
     "axios": "^0.21.1",
     "date-fns": "^2.22.1",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-date-range": "^1.1.4",
     "react-datepicker": "^4.1.1",
@@ -24,7 +25,9 @@
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
     "theme-ui": "^0.9.1",
-    "web-vitals": "^1.1.1"
+    "use-react-modal": "^0.0.9",
+    "web-vitals": "^1.1.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
