--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "date-fns": "^2.22.1",
     "formik": "^2.2.9",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-date-range": "^1.1.4",
     "react-datepicker": "^4.1.1",
