--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-spinners": "^0.11.0",
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
+    "use-persisted-state": "^0.3.3",
     "use-react-modal": "^0.0.9",
     "web-vitals": "^1.1.1",
     "yup": "^0.32.9"
